<resources>
    <string name="app_name" translatable="false">LockAway</string>

    <string name="afeya_slogen">Fairy-tale experience</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="check_item">Not All Fields Are Valid!</string>
    <string name="AfeyaStoreID" translatable="false">g1bzMQEXoj</string>
    <string name="item_addedd">Item Added To Order</string>
    <string name="clear">Clear</string>
    <string name="continuetoorder">Continue</string>
    <string name="item_removed">Item Removed From Order</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="current_address">Current Address</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="login">Login</string>
    <string name="signUp">SignUp</string>
    <string name="username">User Name</string>
    <string name="loginError">Failed to login</string>
    <string name="Successlogin">Successfully Logged in</string>
    <string name="welcomeText">Welcome To Afeya Ksuma</string>
    <string name="logOut">Log Out</string>
    <string name="youLogInAs">You Are Logged In As</string>
    <string name="continueToMenu">Continue To Menu</string>
    <string name="errorSignup">Error SignUp</string>
    <string name="seccesssignup">SignUp Success!</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Sensitivetogluten">Sensitive to gluten</string>
    <string name="isVeg">I am a vegetarian</string>
    <string name="dummyEmail">Example@Email.com</string>
    <string name="yourPassword">Your Password</string>
    <string name="dumyUserName">Your User Name</string>
    <string name="loadingmenu">Loading Menu, Please wait...</string>
    <string name="price">Price:</string>
    <string name="timetomake">Time To Make:</string>
    <string name="title">Title</string>
    <string name="description">Item Desciption</string>
    <string name="addtoorder">Add To Order</string>
    <string name="addrofavorite">Add To Favorite</string>
    <string name="itemaddedtofavorite">Item Added To Your Favorite List</string>
    <string name="itemalreadyfavorite">Item Already In Your Favorite</string>
    <string name="erroraddingitemtofavorite">Error Adding item to favorite</string>
    <string name="loginscreen">Login/Signup</string>
    <string name="errorRemovingItemFromOrder">Error removing item from order</string>
    <string name="parse_user_display_name">DisplayName</string>
    <string name="parse_user_phone_number">PhoneNumber</string>
    <string name="parse_user_is_veg">isVeg</string>
    <string name="parse_user_is_gloten">isGloten</string>
    <string name="displayName">Display Name</string>
    <string name="errorSignupEmailTaken">the email address has already been taken</string>
    <string name="menu">Menu</string>
    <string name="order_builder">Order Builder</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="iamlate">I Am Late...</string>
    <string name="take_me_to_resturant">Navigate To The Resturant</string>
    <string name="eta">ETA</string>
    <string name="your_order_code">Your Order Code Is:</string>
    <string name="order_status_icon">Order Status Icon</string>
    <string name="sendingOrder">Sending Order...</string>
    <string name="errorSendingOrder">Error Sending Order:</string>
    <string name="loading_address">Loading You Address...</string>
    <string name="order_date">Order Date</string>
    <string name="your_orders">Your Orders</string>
    <string name="order_on_building">Your order still in building...</string>
    <string name="order_on_hold">Your order is on hold</string>
    <string name="order_on_delay">Your order is on delay</string>
    <string name="order_on_make">Your order is on make right now</string>
    <string name="order_is_ready">Your order is ready to collect</string>
    <string name="order_on_waiting_to_start">Your order is waiting in turn</string>
    <string name="order_closed">Your order is closed</string>
    <string name="cancle_order">Cancel Order</string>
    <string name="msg_OrderCanceledSuccess">Order Canceled</string>
    <string name="msg_CantCancelOrder">Cant Cancel Order</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="wait_login_msg">Loging in...</string>
    <string name="anonym_login">Anonymous</string>
    <string name="order_again">Order again</string>
    <string name="loading_order_wait">Loading orders, please wait...</string>
    <string name="store_closed">Sorry! Store is closed now...</string>
    <string name="must_insert_phone">You must insert phone for anonymous login...</string>
</resources>
