<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yirmio.lockaway.UI.LoginActivity"
    android:background="@color/backgroundColor">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txtInputEmail"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:text="you@you.com"
        android:layout_below="@+id/txtInputUserName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtInputPassword"
        android:layout_below="@+id/txtInputEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:text="your password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btnLogin"
        android:layout_below="@+id/chkBxIsGlotonSensitive"
        android:layout_alignParentLeft="true"
        android:layout_toEndOf="@+id/btnSignUp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:id="@+id/btnSignUp"
        android:layout_below="@+id/chkBxIsGlotonSensitive"
        android:layout_alignParentRight="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtInputUserName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:text="@string/username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtInputPassword2"
        android:text="your password"
        android:layout_below="@+id/txtInputPassword"
        android:layout_centerHorizontal="true"
        android:visibility="visible" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/txtInputPhone"
        android:layout_below="@+id/txtInputPassword2"
        android:layout_centerHorizontal="true"
        android:text="@string/PhoneNumber" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sensitivetogluten"
        android:id="@+id/chkBxIsGlotonSensitive"
        android:layout_below="@+id/txtInputPhone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="false"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isVeg"
        android:layout_alignBottom="@+id/chkBxIsGlotonSensitive"
        android:layout_alignParentRight="false"
        android:layout_alignParentStart="false"
        android:layout_toRightOf="@+id/chkBxIsGlotonSensitive"
        android:layout_marginLeft="5dp"
        android:checked="false"
        android:id="@+id/chkBxIsVeg" />
</RelativeLayout>
